@@ -16,9 +16,15 @@
 
 package web;
 
+import core.Settings;
+
+import java.io.IOException;
+import java.io.InputStream;
+import java.io.InputStreamReader;
+import java.net.HttpURLConnection;
 import java.net.URI;
-import java.util.HashMap;
-import java.util.Map;
+import java.net.URISyntaxException;
+import java.net.URL;
 
 public class NetworkManager
 {
@@ -27,26 +33,53 @@ public class NetworkManager
         return s_instance;
     }
 
-    private final Map<String, WebSocketWrapper> m_sockets;
+    private final String         m_wsLink;
+    private final String         m_httpLink;
+    private       NetworkAdapter m_currentAdapter;
 
     private NetworkManager() {
-        m_sockets = new HashMap<>();
+        m_wsLink = Settings.getWsUrl();
+        m_httpLink = Settings.getApiUrl();
+        m_currentAdapter = null;
     }
-    public NetworkAdapter getAdapter(String wsLink) {
-        WebSocketWrapper socket = null;
-        if (m_sockets.containsKey(wsLink)) {
-            socket = m_sockets.get(wsLink);
+    public NetworkAdapter getAdapter(String id, boolean isSeed) throws URISyntaxException {
+        if (m_currentAdapter == null
+            || !m_currentAdapter.getId().equals(id)
+            || m_currentAdapter.isSeed() != isSeed) {
+            String link = m_wsLink + "role=" + (isSeed ? "seed" : "leech") + "&sessionid=" + id;
+            WebSocketWrapper socket = new WebSocketWrapper(new URI(link));
+            m_currentAdapter = new NetworkAdapter(socket, id, isSeed);
         }
-        else {
-            try {
-                URI link = new URI(wsLink);
-                socket = new WebSocketWrapper(link);
-                m_sockets.put(wsLink, socket);
+        return m_currentAdapter;
+    }
+    public String reserveSessionId() throws IOException {
+        URL link = new URL(m_httpLink);
+        String reply = "";
+        final int BUFFER_SIZE = 128;
+
+        HttpURLConnection conn = (HttpURLConnection)link.openConnection();
+        conn.setReadTimeout(10000);
+        conn.setConnectTimeout(15000);
+        conn.setRequestMethod("GET");
+        conn.setDoInput(true);
+        conn.connect();
+        int response = conn.getResponseCode();
+        if (response != HttpURLConnection.HTTP_OK)
+            throw new IOException("HTTP error: " + response);
+        InputStream inStream = conn.getInputStream();
+        if (inStream != null) {
+            InputStreamReader reader = new InputStreamReader(inStream);
+            char[] buffer = new char[BUFFER_SIZE];
+
+            int lastRead = 0, offset = 0;
+            while (lastRead != -1) {
+                lastRead = reader.read(buffer, offset, BUFFER_SIZE - offset);
+                offset += lastRead;
             }
-            catch (Exception e) {
-                throw new IllegalArgumentException(e.toString());
-            }
+            if (offset != -1)
+                reply = new String(buffer, 0, offset + 1);
+            inStream.close();
         }
-        return new NetworkAdapter(socket);
+        return reply;
     }
 }
